--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "@typescript-eslint/eslint-plugin": "^6.2.1",
         "@typescript-eslint/parser": "^6.2.1",
         "eslint-config-next": "13.4.12",
-        "eslint-config-prettier": "^8.9.0",
+        "eslint-config-prettier": "^8.10.0",
         "eslint-plugin-import": "^2.28.0",
         "eslint-plugin-no-relative-import-paths": "^1.5.2",
         "eslint-plugin-prettier": "^5.0.0",
@@ -33,14 +33,14 @@
     "devDependencies": {
         "@raflymln/prettier-config": "^1.0.0",
         "eslint": "8.46.0",
-        "prettier": "^3.0.0",
+        "prettier": "^3.0.1",
         "tailwindcss": "^3.3.3",
         "typescript": "^5.1.6"
     },
     "peerDependencies": {
-        "eslint": "8.45.0",
-        "prettier": "^3.0.0",
-        "tailwindcss": "^3.3.3",
-        "typescript": "^5.1.6"
+        "eslint": ">= 3",
+        "prettier": ">= 3",
+        "tailwindcss": ">= 3",
+        "typescript": ">= 5"
     }
 }
